Fixing a visual bug of some links that they weren't been displayed

--- a/siteace.css
+++ b/siteace.css
@@ -12,6 +12,10 @@
 	color: white;
 }
 
+.accounts-dialog {
+	background: #87CEEB; 
+}
+
 #login-buttons a {
 	color: white;
 	text-decoration: none;
